Atualiza arquivos do site

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </section>
 
         <section id="historia" class="flex-section">
-            <img src="images/edição_04.jpg" alt="Fotografia autoral - Oliver Reality" class="flex-image" loading="lazy">
+            <img src="images/edicao-04.jpg" alt="Fotografia autoral - Oliver Reality" class="flex-image" loading="lazy">
             <div class="flex-text">
                 <h2>Nossa História</h2>
                 <p>Com a pandemia, a demanda por delivery de alimentos e bebidas, principalmente por aplicativos,
