Corrige nome da imagem Edicao-Avancada para compatibilidade com GitHub Pages

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <section id="edicao-avancada" class="edicao-section">
             <h2>Edição Avançada</h2>
             <p>Ajuste de cor e mudança para o foco no produto</p>
-            <img src="images/Edição-Avançada.png" alt="Exemplo de Edição Avançada" class="edicao-image" loading="lazy">
+            <img src="images/Edicao-Avancada.png" alt="Exemplo de Edição Avançada" class="edicao-image" loading="lazy">
         </section>
 
         <section id="edicao-premium" class="edicao-section">
