--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pt-br">
 
 <head>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9256079067438327"
+     crossorigin="anonymous"></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oliver Reality | Fotografia de Alimentos</title>
