--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 </head>
 
 <body>
+
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-9256079067438327">
+</amp-auto-ads>
+        
     <header>
         <nav>
             <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i
