Changes to be committed: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -2,25 +2,32 @@
 <html lang="pt-br">
 
 <head>
-    
+    <!-- Metadados básicos do documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oliver Reality | Fotografia de Alimentos</title>
+    <!-- Descrição e palavras-chave para SEO -->
     <meta name="description"
         content="Fotografia profissional de alimentos e produtos em Niterói e região. Destaque seu negócio com imagens de alta qualidade. Veja nosso portfólio!">
     <meta name="keywords"
         content="fotografia de alimentos, fotografia profissional, fotos de comida, Oliver Reality, Niterói, fotografia de produtos, portfólio, ensaio fotográfico">
+    <!-- Metadados para compartilhamento em redes sociais (Open Graph) -->
     <meta property="og:title" content="Oliver Reality | Fotografia de Alimentos">
     <meta property="og:description"
         content="Transforme seus pratos em obras de arte visuais. Fotografia profissional para restaurantes, chefs e marcas.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.oliverreality.com/">
     <meta property="og:image" content="images/portfolio1.jpg">
+    <!-- URL canônica para SEO -->
     <link rel="canonical" href="https://www.oliverreality.com/">
+    <!-- Importa o CSS principal do site -->
     <link rel="stylesheet" href="style.css">
+    <!-- Importa ícones do Font Awesome para uso de ícones sociais e menu -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Ícone do site (favicon) -->
     <link rel="icon" type="image/jpeg" href="images/logo.jpg">
     <link rel="apple-touch-icon" href="images/logo.jpg">
+    <!-- Google Analytics (rastreamento de visitas) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5NTMZQT9E"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -28,6 +35,7 @@
         gtag('js', new Date());
         gtag('config', 'G-T5NTMZQT9E');
     </script>
+    <!-- Dados estruturados para SEO local (Google) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -53,12 +61,16 @@
 </head>
 
 <body>        
+    <!-- Início do cabeçalho e navegação principal -->
     <header>
         <nav>
+            <!-- Botão do menu hambúrguer para mobile -->
             <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i
                     class="fas fa-bars"></i></button>
+            <!-- Logo e nome do site -->
             <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" />
                 Oliver Reality | Fotografia</a>
+                <!-- Menu de navegação principal -->
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="planoseprecos.html">Planos e Preços</a></li>
@@ -66,6 +78,7 @@
                     <li><a href="contatos.html">Contatos</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
+            <!-- Ícones de redes sociais no cabeçalho -->
             <div class="social-footer" style="margin-left:1rem;">
                 <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i
                         class="fab fa-instagram"></i></a>
@@ -78,16 +91,20 @@
     </header>
 
     <main>
+        <!-- Seção principal de destaque (hero) -->
         <section id="hero">
             <div class="hero-content">
                 <h1>Oliver Reality</h1>
                 <br>
                 <p>Transformando seus pratos em obras de arte visuais.</p>
+                <!-- Botão para portfólio -->
                 <a href="portfolio.html" class="btn">Veja nosso Portfólio</a>
+                <!-- Botão para orçamento -->
                 <a href="contatos.html" class="btn" style="margin-left:1rem;">Solicite um Orçamento</a>
             </div>
         </section>
 
+        <!-- Seção sobre o propósito da empresa -->
         <section id="proposito" class="flex-section">
             <div class="flex-text">
                 <h2>Nosso Propósito</h2>
@@ -95,9 +112,11 @@
                     trazendo a notoriedade que seu negócio merece, através de fotos criativas, com design moderno e de
                     acordo com as exigências dos consumidores.</p>
             </div>
+            <!-- Imagem ilustrativa da equipe -->
             <img src="images/IMG_6741.jpg" alt="Equipe Oliver Reality em ação" class="flex-image" loading="lazy">
         </section>
 
+        <!-- Seção contando a história da empresa -->
         <section id="historia" class="flex-section">
             <img src="images/edicao-04.jpg" alt="Fotografia autoral - Oliver Reality" class="flex-image" loading="lazy">
             <div class="flex-text">
@@ -111,6 +130,7 @@
             </div>
         </section>
 
+        <!-- Seção com depoimento pessoal do fotógrafo -->
         <section id="historia2" class="historia2-flex">
             <div class="historia2-texto">
                 <p>"Com um preço acessível até para quem está começando seu pequeno negócio hoje, quero dar uma vantagem
@@ -120,9 +140,11 @@
                 <p>Me deixe provar isso pra você!</p>
                 <p>(Oliver Freitas)</p>
             </div>
+            <!-- Foto do fotógrafo -->
             <img src="images/Oliver.jpg" alt="Oliver Freitas - Fotógrafo" class="historia2-img" loading="lazy">
         </section>
 
+        <!-- Seção explicando o processo de trabalho -->
         <section id="como-funciona" class="flex-section">
             <img src="images/IMG_6735.jpg" alt="Oliver Reality em visita técnica" class="flex-image" loading="lazy">
             <div class="flex-text">
@@ -137,33 +159,41 @@
             </div>
         </section>
 
+        <!-- Seção sobre edição das fotos -->
         <section id="edicao-fotos" class="edicao-fotos-section">
             <h2>Edição das fotos</h2>
             <p>Independente do plano que escolher, todas as fotos são editadas.<br>
             No entanto, cada plano oferece tipos diferentes de edição.</p>
             <div class="edicao-fotos-galeria">
+                <!-- Exemplos de fotos editadas -->
                 <img src="images/IMG_6737-2.jpg" alt="Exemplo de edição 1" loading="lazy">
                 <img src="images/IMG_5435-HDR-Edit-2.jpg" alt="Exemplo de edição 2" loading="lazy">
                 <img src="images/IMG_0003-2.jpg" alt="Exemplo de edição 3" loading="lazy">
             </div>
         </section>
 
+        <!-- Seção sobre edição avançada -->
         <section id="edicao-avancada" class="edicao-section">
             <h2>Edição Avançada</h2>
             <p>Ajuste de cor e mudança para o foco no produto</p>
+            <!-- Imagem de exemplo de edição avançada -->
             <img src="images/Edicao-Avancada.png" alt="Exemplo de Edição Avançada" class="edicao-image" loading="lazy">
         </section>
 
+        <!-- Seção sobre edição premium -->
         <section id="edicao-premium" class="edicao-section">
             <h2>Edição Premium</h2>
             <p>Remoção de artefatos</p>
+            <!-- Imagem de exemplo de edição premium -->
             <img src="images/Edição-Premium.png" alt="Exemplo de Edição Premium" class="edicao-image" loading="lazy">
         </section>
 
+        <!-- Seção de depoimentos de clientes -->
         <section id="depoimentos-clientes" class="depoimentos-clientes-section">
             <h2>Depoimentos de Clientes</h2>
             <div class="depoimentos-clientes-grid">
                 <div class="depoimento-item">
+                    <!-- Foto do cliente 1 -->
                     <img src="images/Layer-1.png" alt="Cliente 1" class="depoimento-img" loading="lazy">
                     <blockquote>
                         <p>Gostaria de deixar aqui registrado que você é um profissional incrível,<br>
@@ -173,6 +203,7 @@
                     </blockquote>
                 </div>
                 <div class="depoimento-item">
+                    <!-- Foto do cliente 2 -->
                     <img src="images/Layer-2.png" alt="Cliente 2" class="depoimento-img" loading="lazy">
                     <blockquote>
                         <p>Excelente profissional!<br>
@@ -188,10 +219,12 @@
         <section id="antes-depois" class="edicao-section">
             <h2>Transformação com Oliver Reality</h2>
             <p>Veja a diferença que uma fotografia profissional faz para seus produtos</p>
+            <!-- Imagem de antes e depois -->
             <img src="images/antes-depois.jpg" alt="Antes e depois: fotografia de alimentos com Oliver Reality" class="edicao-image" loading="lazy">
         </section>
     </main>
 
+    <!-- Chamada para ação (CTA) para contato -->
     <section class="portfolio-cta">
       <div class="cta-content">
         <h2>Destaque sua marca com imagens irresistíveis!</h2>
@@ -201,6 +234,7 @@
       </div>
     </section>
 
+    <!-- Rodapé do site com redes sociais e informações legais -->
     <footer>
         <div class="social-footer">
             <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i
@@ -217,6 +251,7 @@
         <p>Proibida a reprodução de qualquer imagem sem autorização.</p>
     </footer>
 
+    <!-- Script para funcionamento do menu mobile -->
     <script>
         // Menu hambúrguer para mobile
         const menuToggle = document.querySelector('.menu-toggle');
