modified:   blog.html 	modified:   blog001.html 	modified:   blog002.html 	modified:   contatos.html 	modified:   index.html 	modified:   obrigado.html 	modified:   planoseprecos.html 	modified:   portfolio.html

--- a/contatos.html
+++ b/contatos.html
@@ -2,24 +2,29 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Metadados básicos da página de contatos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oliver Reality | Contatos</title>
-    <meta name="description"
-        content="Entre em contato com a Oliver Reality para solicitar orçamento de fotografia de alimentos e produtos.">
-    <meta name="keywords"
-        content="contato, orçamento, fotografia de alimentos, Oliver Reality, Niterói, fotografia de produtos">
+    <!-- Descrição e palavras-chave para SEO -->
+    <meta name="description" content="Entre em contato com a Oliver Reality para solicitar orçamento de fotografia de alimentos e produtos.">
+    <meta name="keywords" content="contato, orçamento, fotografia de alimentos, Oliver Reality, Niterói, fotografia de produtos">
+    <!-- Metadados para redes sociais (Open Graph) -->
     <meta property="og:title" content="Oliver Reality | Contatos">
-    <meta property="og:description"
-        content="Fale conosco para saber mais sobre nossos serviços de fotografia profissional.">
+    <meta property="og:description" content="Fale conosco para saber mais sobre nossos serviços de fotografia profissional.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.oliverreality.com/contatos.html">
     <meta property="og:image" content="images/portfolio1.jpg">
+    <!-- URL canônica para SEO -->
     <link rel="canonical" href="https://www.oliverreality.com/contatos.html">
+    <!-- CSS principal -->
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="images/logo.jpg">
     <link rel="apple-touch-icon" href="images/logo.jpg">
+    <!-- Dados estruturados para SEO local -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -45,12 +50,15 @@
 </head>
 
 <body>
+    <!-- Cabeçalho e navegação principal -->
     <header>
         <nav>
-            <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i
-                    class="fas fa-bars"></i></button>
+            <!-- Botão do menu hambúrguer para mobile -->
+            <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i class="fas fa-bars"></i></button>
+            <!-- Logo e nome do site -->
             <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" />
                 Oliver Reality | Fotografia</a>
+            <!-- Menu de navegação principal -->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="planoseprecos.html">Planos e Preços</a></li>
@@ -58,13 +66,11 @@
                 <li><a href="contatos.html">Contatos</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
+            <!-- Ícones de redes sociais no cabeçalho -->
             <div class="social-footer" style="margin-left:1rem;">
-                <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i
-                        class="fab fa-instagram"></i></a>
-                <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i
-                        class="fab fa-facebook"></i></a>
-                <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i
-                        class="fab fa-whatsapp"></i></a>
+                <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i class="fab fa-instagram"></i></a>
+                <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i class="fab fa-facebook"></i></a>
+                <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i class="fab fa-whatsapp"></i></a>
             </div>
         </nav>
     </header>
