--- a/planoseprecos.html
+++ b/planoseprecos.html
@@ -2,23 +2,29 @@
 <html lang="pt-br">
 
 <head>
+  <!-- Metadados básicos da página de planos e preços -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oliver Reality | Planos e Preços</title>
-  <meta name="description"
-    content="Conheça nossos planos e preços para fotografia de alimentos e produtos. Solicite um orçamento personalizado.">
-  <meta name="keywords"
-    content="planos de fotografia, preços, orçamento, fotografia de alimentos, Oliver Reality, Niterói">
+  <!-- Descrição e palavras-chave para SEO -->
+  <meta name="description" content="Conheça nossos planos e preços para fotografia de alimentos e produtos. Solicite um orçamento personalizado.">
+  <meta name="keywords" content="planos de fotografia, preços, orçamento, fotografia de alimentos, Oliver Reality, Niterói">
+  <!-- Metadados para redes sociais (Open Graph) -->
   <meta property="og:title" content="Oliver Reality | Planos e Preços">
   <meta property="og:description" content="Veja nossos planos e preços para serviços de fotografia profissional.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.oliverreality.com/planoseprecos.html">
   <meta property="og:image" content="images/portfolio1.jpg">
+  <!-- URL canônica para SEO -->
   <link rel="canonical" href="https://www.oliverreality.com/planoseprecos.html">
+  <!-- CSS principal -->
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome para ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <!-- Favicon -->
   <link rel="icon" type="image/jpeg" href="images/logo.jpg">
   <link rel="apple-touch-icon" href="images/logo.jpg">
+  <!-- Google Analytics (rastreamento de visitas) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5NTMZQT9E"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -26,6 +32,7 @@
     gtag('js', new Date());
     gtag('config', 'G-T5NTMZQT9E');
   </script>
+  <!-- Dados estruturados para SEO local -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -51,11 +58,14 @@
 </head>
 
 <body>
+  <!-- Cabeçalho e navegação principal -->
   <header>
     <nav>
+      <!-- Botão do menu hambúrguer para mobile -->
       <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i class="fas fa-bars"></i></button>
-      <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" /> Oliver
-        Reality | Fotografia</a>
+      <!-- Logo e nome do site -->
+      <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" /> Oliver Reality | Fotografia</a>
+      <!-- Menu de navegação principal -->
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="planoseprecos.html">Planos e Preços</a></li>
@@ -63,13 +73,11 @@
         <li><a href="contatos.html">Contatos</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
+      <!-- Ícones de redes sociais no cabeçalho -->
       <div class="social-footer" style="margin-left:1rem;">
-        <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i
-            class="fab fa-instagram"></i></a>
-        <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i
-            class="fab fa-facebook"></i></a>
-        <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i
-            class="fab fa-whatsapp"></i></a>
+        <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i class="fab fa-facebook"></i></a>
+        <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i class="fab fa-whatsapp"></i></a>
       </div>
     </nav>
   </header>
