--- a/portfolio.html
+++ b/portfolio.html
@@ -2,24 +2,32 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Metadados básicos da página de portfólio -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oliver Reality | Portfólio</title>
+    <!-- Descrição e palavras-chave para SEO -->
     <meta name="description"
         content="Confira o portfólio de fotografia de alimentos da Oliver Reality. Imagens profissionais para valorizar seu negócio.">
     <meta name="keywords"
         content="portfólio, fotografia de alimentos, fotos profissionais, Oliver Reality, Niterói, fotografia de produtos">
+    <!-- Metadados para redes sociais (Open Graph) -->
     <meta property="og:title" content="Oliver Reality | Portfólio">
     <meta property="og:description"
         content="Veja exemplos de trabalhos realizados em fotografia de alimentos e produtos.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.oliverreality.com/portfolio.html">
     <meta property="og:image" content="images/portfolio1.jpg">
+    <!-- URL canônica para SEO -->
     <link rel="canonical" href="https://www.oliverreality.com/portfolio.html">
+    <!-- CSS principal -->
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="images/logo.jpg">
     <link rel="apple-touch-icon" href="images/logo.jpg">
+    <!-- Dados estruturados para SEO local -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -45,12 +53,16 @@
 </head>
 
 <body>
+    <!-- Cabeçalho e navegação principal -->
     <header>
         <nav>
+            <!-- Botão do menu hambúrguer para mobile -->
             <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i
                     class="fas fa-bars"></i></button>
+            <!-- Logo e nome do site -->
             <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" />
                 Oliver Reality | Fotografia</a>
+            <!-- Menu de navegação principal -->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="planoseprecos.html">Planos e Preços</a></li>
@@ -58,6 +70,7 @@
                 <li><a href="contatos.html">Contatos</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
+            <!-- Ícones de redes sociais no cabeçalho -->
             <div class="social-footer" style="margin-left:1rem;">
                 <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i
                         class="fab fa-instagram"></i></a>
