--- a/obrigado.html
+++ b/obrigado.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Metadados básicos da página de agradecimento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mensagem enviada | Oliver Reality</title>
+    <!-- Descrição para SEO -->
     <meta name="description" content="Obrigado por entrar em contato com a Oliver Reality. Sua mensagem foi enviada com sucesso!">
+    <!-- CSS principal -->
     <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="images/logo.jpg">
     <link rel="apple-touch-icon" href="images/logo.jpg">
+    <!-- Dados estruturados para SEO local -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -33,10 +39,14 @@
     </script>
 </head>
 <body>
+    <!-- Cabeçalho e navegação principal -->
     <header>
         <nav>
+            <!-- Botão do menu hambúrguer para mobile -->
             <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i class="fas fa-bars"></i></button>
+            <!-- Logo e nome do site -->
             <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" /> Oliver Reality | Fotografia</a>
+            <!-- Menu de navegação principal -->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="planoseprecos.html">Planos e Preços</a></li>
@@ -44,6 +54,7 @@
                 <li><a href="contatos.html">Contatos</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
+            <!-- Ícones de redes sociais no cabeçalho -->
             <div class="social-footer" style="margin-left:1rem;">
                 <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i class="fab fa-instagram"></i></a>
                 <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i class="fab fa-facebook"></i></a>
