Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       ]
     }
     </script>
+
+    <!-- Google AdSense: ativa anúncios automáticos -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9256079067438327"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
