--- a/contatos.html
+++ b/contatos.html
@@ -19,6 +19,7 @@
     <link rel="canonical" href="https://www.oliverreality.com/contatos.html">
     <!-- CSS principal -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/contatos.css">
     <!-- Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Favicon -->
