--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     <!-- Importa o CSS principal do site -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/index.css">
+
 
     <!-- Importa ícones do Font Awesome para uso de ícones sociais e menu -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
