--- a/obrigado.html
+++ b/obrigado.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <!-- Metadados básicos da página de agradecimento -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mensagem enviada | Oliver Reality</title>
-    <!-- Descrição para SEO -->
-    <meta name="description" content="Obrigado por entrar em contato com a Oliver Reality. Sua mensagem foi enviada com sucesso!">
-    <!-- CSS principal -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome para ícones -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="images/logo.jpg">
-    <link rel="apple-touch-icon" href="images/logo.jpg">
-    <!-- Dados estruturados para SEO local -->
-    <script type="application/ld+json">
+  <!-- Metadados básicos da página de agradecimento -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mensagem enviada | Oliver Reality</title>
+  <!-- Descrição para SEO -->
+  <meta name="description"
+    content="Obrigado por entrar em contato com a Oliver Reality. Sua mensagem foi enviada com sucesso!">
+  <!-- CSS principal -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/obrigado.css">
+  <!-- Font Awesome para ícones -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="images/logo.jpg">
+  <link rel="apple-touch-icon" href="images/logo.jpg">
+  <!-- Dados estruturados para SEO local -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
@@ -38,52 +41,60 @@
     }
     </script>
 </head>
+
 <body>
-    <!-- Cabeçalho e navegação principal -->
-    <header>
-        <nav>
-            <!-- Botão do menu hambúrguer para mobile -->
-            <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i class="fas fa-bars"></i></button>
-            <!-- Logo e nome do site -->
-            <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" /> Oliver Reality | Fotografia</a>
-            <!-- Menu de navegação principal -->
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="planoseprecos.html">Planos e Preços</a></li>
-                <li><a href="portfolio.html">Portfólio</a></li>
-                <li><a href="contatos.html">Contatos</a></li>
-                <li><a href="blog.html">Blog</a></li>
-            </ul>
-            <!-- Ícones de redes sociais no cabeçalho -->
-            <div class="social-footer" style="margin-left:1rem;">
-                <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i class="fab fa-instagram"></i></a>
-                <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i class="fab fa-facebook"></i></a>
-                <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i class="fab fa-whatsapp"></i></a>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section style="text-align:center; margin-top:4rem;">
-            <h1>Obrigado pelo contato!</h1>
-            <br>
-            <p style="margin-bottom:2.5rem;">Sua mensagem foi enviada com sucesso.<br>
-            Em breve retornaremos para você.</p>
-            <a href="index.html" class="btn" style="margin:2rem auto 0 auto; display:inline-block;">Voltar para a Home</a>
-        </section>
-    </main>
-    <footer>
-        <div class="social-footer">
-            <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i class="fab fa-instagram"></i></a>
-            <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i class="fab fa-facebook"></i></a>
-            <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i class="fab fa-whatsapp"></i></a>
-            <a href="mailto:oliverrealityfoto@gmail.com"><i class="far fa-envelope"></i></a>
-        </div>
-        <p>&copy; 2025 Oliver Reality | Fotografia de Alimentos e Produtos | Niterói - RJ</p>
-        <p>Todas as imagens são protegidas pela Lei de Direitos Autorais nº 9.610/98.</p>
-        <p>Proibida a reprodução de qualquer imagem sem autorização.</p>
-    </footer>
-    <script src="script.js"></script>
-    <script>
+  <!-- Cabeçalho e navegação principal -->
+  <header>
+    <nav>
+      <!-- Botão do menu hambúrguer para mobile -->
+      <button class="menu-toggle" aria-label="Abrir menu de navegação" tabindex="0"><i class="fas fa-bars"></i></button>
+      <!-- Logo e nome do site -->
+      <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo Oliver Reality" loading="lazy" /> Oliver
+        Reality | Fotografia</a>
+      <!-- Menu de navegação principal -->
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="planoseprecos.html">Planos e Preços</a></li>
+        <li><a href="portfolio.html">Portfólio</a></li>
+        <li><a href="contatos.html">Contatos</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+      <!-- Ícones de redes sociais no cabeçalho -->
+      <div class="social-footer" style="margin-left:1rem;">
+        <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i
+            class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i
+            class="fab fa-facebook"></i></a>
+        <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i
+            class="fab fa-whatsapp"></i></a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section style="text-align:center; margin-top:4rem;">
+      <h1>Obrigado pelo contato!</h1>
+      <br>
+      <p style="margin-bottom:2.5rem;">Sua mensagem foi enviada com sucesso.<br>
+        Em breve retornaremos para você.</p>
+      <a href="index.html" class="btn" style="margin:2rem auto 0 auto; display:inline-block;">Voltar para a Home</a>
+    </section>
+  </main>
+  <footer>
+    <div class="social-footer">
+      <a href="https://instagram.com/oliver.reality" target="_blank" aria-label="Instagram Oliver Reality"><i
+          class="fab fa-instagram"></i></a>
+      <a href="https://facebook.com/oliverreality" target="_blank" aria-label="Facebook Oliver Reality"><i
+          class="fab fa-facebook"></i></a>
+      <a href="https://wa.me/5521967433336" target="_blank" aria-label="WhatsApp Oliver Reality"><i
+          class="fab fa-whatsapp"></i></a>
+      <a href="mailto:oliverrealityfoto@gmail.com"><i class="far fa-envelope"></i></a>
+    </div>
+    <p>&copy; 2025 Oliver Reality | Fotografia de Alimentos e Produtos | Niterói - RJ</p>
+    <p>Todas as imagens são protegidas pela Lei de Direitos Autorais nº 9.610/98.</p>
+    <p>Proibida a reprodução de qualquer imagem sem autorização.</p>
+  </footer>
+  <script src="script.js"></script>
+  <script>
     // Menu hambúrguer para mobile
     const menuToggle = document.querySelector('.menu-toggle');
     const navUl = document.querySelector('header nav ul');
@@ -95,6 +106,7 @@
         navUl.classList.toggle('open');
       }
     });
-    </script>
+  </script>
 </body>
+
 </html>
