modified:   css/index.css 	modified:   css/planoseprecos.css 	modified:   css/portfolio.css 	modified:   index.html 	modified:   planoseprecos.html 	modified:   portfolio.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </main>
 
     <!-- Chamada para ação (CTA) para contato -->
-    <section class="portfolio-cta">
+    <section class="cta-section">
         <div class="cta-content">
             <h2>Destaque sua marca com imagens irresistíveis!</h2>
             <p>Entre em contato e vamos criar juntos fotos que vendem mais.</p>
