--- a/planoseprecos.html
+++ b/planoseprecos.html
@@ -206,7 +206,7 @@
     </section>
     <!-- /Plano Premium -->
 
-    <section class="portfolio-cta">
+    <section class="cta-section">
       <div class="cta-content">
         <h2>Destaque sua marca com imagens irresistíveis!</h2>
         <p>Entre em contato e vamos criar juntos fotos que vendem mais.</p>
