--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
     </header>
 
     <main>
-        <section class="portfolio-cta">
+        <section class="cta-section">
             <div class="cta-content">
                 <h2>Destaque sua marca com imagens irresistíveis!</h2>
                 <p>Entre em contato e vamos criar juntos fotos que vendem mais.</p>
@@ -173,7 +173,7 @@
                 </figure>
             </div>
         </section>
-        <section class="portfolio-cta">
+        <section class="cta-section">
             <div class="cta-content">
                 <h2>Destaque sua marca com imagens irresistíveis!</h2>
                 <p>Entre em contato e vamos criar juntos fotos que vendem mais.</p>
