modified:   index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <a href="portfolio.html" class="btn">Veja nosso Portfólio</a>
 
                 <!-- Botão para orçamento -->
-                <a href="contatos.html" class="btn" style="margin-left:1rem;">Solicite um Orçamento</a>
+                <a href="contatos.html" class="btn">Solicite um Orçamento</a>
             </div>
         </section>
 
